vue3-textstyle revice

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       justify-content: center;
     }
     .textbox {
-      text-align: center;
+      padding-left: 305px;
       margin: 15px 0;
     }
     img {
